# tech-challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  event.json  handler.py  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  mkdocs.yml
.github/workflows/: build-and-deploy.yml  build-and-push.yml  build-deploy-dev.yml  build-deploy-mkdocs-to-pages.yml  deploy-dev.yml  docs.yml  flake8.yml  interrogate.yml  lint-flake8-pr-changed-files.yml  lint.yml  pr_comment.yml  pytest.yml  release.yml  sonarqube.yaml  test-coverage.yml  test-create-pr.yaml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
alembic/: env.py
app/: crud.py  database.py  logging_config.py  main.py  middleware.py  models.py  schemas.py  security.py
app/db/: database.py
app/middleware/: __init__.py  middleware.py
app/model/: models.py  schemas.py
app/routers/: auth.py  category.py  customer.py  order.py  product.py
app/services/: crud.py  mercadopago.py  repository.py  security.py
app/tests/: test_app.py  test_auth.py  test_models.py  test_route_auth.py  test_schemas.py
app/tools/: initialize_db.py  logging.py  sweep.py
core-requirements/Mako-1.3.7.dist-info/: METADATA  RECORD
core-requirements/SQLAlchemy-2.0.34.dist-info/: RECORD
core-requirements/alembic-1.13.2.dist-info/: RECORD
core-requirements/asyncpg-0.29.0.dist-info/: RECORD
core-requirements/bcrypt-4.2.0.dist-info/: RECORD
core-requirements/ecdsa-0.19.0.dist-info/: RECORD
core-requirements/fastapi-0.112.4.dist-info/: RECORD
core-requirements/fastapi_limiter-0.1.6.dist-info/: RECORD
core-requirements/greenlet-3.1.1.dist-info/: RECORD  WHEEL
core-requirements/httpx-0.27.2.dist-info/: RECORD
core-requirements/rsa-4.9.dist-info/: RECORD
core-requirements/uvicorn-0.30.6.dist-info/: RECORD
ddd/: index.html
docs/: ddd.md  entrega.md  environment.md  event-storming.md  fase1.md  index.md  steps.md  testando.md
docs/fase_1/: ddd.md  event_storming.md
docs/fase_2/: clean_code.md  kubernetes.md  novas_rotas.md  steps.md
docs/fase_3/: cicd_code_app.md  eks_infra_cicd.md  sls_setup.md
docs/fase_4/: continuous_integration.md  movies.md  ms_architecture.md
docs/stylesheets/: extra.css
entrega/: index.html
environment/: index.html
event-storming/: index.html
extra-requirements/Markdown-3.7.dist-info/: RECORD
extra-requirements/babel-2.16.0.dist-info/: RECORD
extra-requirements/charset_normalizer-3.4.0.dist-info/: RECORD
extra-requirements/coverage-7.6.1.dist-info/: RECORD
extra-requirements/ghp_import-2.1.0.dist-info/: RECORD
extra-requirements/greenlet-3.0.3.dist-info/: RECORD
extra-requirements/mangum-0.19.0.dist-info/: RECORD
extra-requirements/mkdocs-1.6.1.dist-info/: RECORD
extra-requirements/mkdocs_autorefs-1.2.0.dist-info/: RECORD
extra-requirements/mkdocs_get_deps-0.2.0.dist-info/: RECORD
extra-requirements/pygments-2.18.0.dist-info/: RECORD
extra-requirements/pymdown_extensions-10.12.dist-info/: RECORD
extra-requirements/pytest-7.4.2.dist-info/: RECORD
extra-requirements/regex-2024.11.6.dist-info/: RECORD
extra-requirements/watchdog-6.0.0.dist-info/: RECORD
fase_1/ddd/: index.html
fase_1/entrega/: index.html
fase_1/event_storming/: index.html
fase_1/steps/: index.html
fase_2/clean_code/: index.html
fase_2/kubernetes/: index.html
fase_2/novas_rotas/: index.html
fase_2/steps/: index.html
fase_3/cicd_code_app/: index.html
fase_3/eks_infra_cicd/: index.html
fase_3/sls_setup/: index.html
fase_4/continuous_integration/: index.html
fase_4/movies/: index.html
infra/: README.md
search/: search_index.json
steps/: index.html
tests/: conftest.py  test_app.py  test_route_auth.py
(+22 files in other folders)
