[tool.poetry]
name = "tech-challenge"
version = "0.1.0"
description = "Projeto Backend da Turma de Pós Graduação em Software Architecture da FIAP em 2024."
authors = ["rikemorais <rikeaju@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.1"
aioredis = "^2.0.1"
alembic = "^1.13.2"
redis = "^5.0.8"
uvicorn = "^0.30.6"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.33"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"
mkdocs-glightbox = "^0.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-coverage = "^0.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
