[tool.poetry]
name = "tech-challenge"
version = "0.1.0"
description = "Projeto Backend da Turma de Pós Graduação em Software Architecture da FIAP em 2024."
authors = ["rikemorais <rikeaju@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
aioredis = "^2.0.1"
alembic = "^1.13.2"
redis = "^5.0.8"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
anyio = "^4.4.0"
async-timeout = "^4.0.3"
asyncpg = "^0.29.0"
bcrypt = "^4.2.0"
certifi = "^2024.7.4"
cffi = "^1.17.0"
click = "^8.1.7"
cryptography = "^43.0.0"
dnspython = "^2.6.1"
ecdsa = "^0.19.0"
email-validator = "^2.2.0"
exceptiongroup = "^1.2.2"
fastapi-cli = "^0.0.5"
fastapi-limiter = "^0.1.6"
greenlet = "^3.0.3"
h11 = "^0.14.0"
hashids = "^1.3.1"
hiredis = "^3.0.0"
httpcore = "^1.0.5"
httptools = "^0.6.1"
httpx = "^0.27.0"
idna = "^3.8"
importlib-metadata = "^8.4.0"
importlib-resources = "^6.4.4"
jinja2 = "^3.1.4"
mako = "^1.3.5"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.5"
mdurl = "^0.1.2"
orjson = "^3.10.7"
passlib = "^1.7.4"
pyasn1 = "^0.6.0"
pycparser = "^2.22"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
pyyaml = "^6.0.2"
rich = "^13.7.1"
rsa = "^4.9"
shellingham = "^1.5.4"
six = "^1.16.0"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.32"
starlette = "^0.38.2"
typer = "^0.12.4"
typing-extensions = "^4.12.2"
ujson = "^5.10.0"
uvloop = "^0.20.0"
watchfiles = "^0.23.0"
websockets = "^13.0"
zipp = "^3.20.0"
mkdocs-material = "^9.5.33"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"
mkdocs-glightbox = "^0.4.0"
pytest-mock = "^3.14.0"
pytest = "^8.3.2"
pytest-coverage = "^0.0"
mangum = "^0.19.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.33"
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"
mkdocs-glightbox = "^0.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-coverage = "^0.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
ruff = "^0.6.2"
taskipy = "^1.13.0"
interrogate = "^1.7.0"
pre-commit = "^3.8.0"

[tool.interrogate]
ignore-init-method = false
generate-badge = "docs/assets/"
ignore-module = true
badge-format = "svg"
--badge-style = "flat-square-modified"
exclude = ["setup.py", "docs", "build", "app/tests"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev fastapi_template/app.py'
test = 'docker compose run tests'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
pre-commit = 'pre-commit run --all-files'
docs = 'mkdocs serve'
compose = 'docker compose up web'
interrogate = 'interrogate -vv'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
